KernelSU: manual filesystem hooks + selinux hook
https://kernelsu.org/guide/how-to-integrate-for-non-gki.html

https://github.com/F-19-F/android_kernel_oneplus_msm8998/commit/1042d5601a1c0db08c9a9cea89d1895e74576a27

Co-Authored-By: f19 <58457605+f-19-f@users.noreply.github.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -136,6 +136,8 @@ source "drivers/virtio/Kconfig"
 
 source "drivers/hv/Kconfig"
 
+source "../KernelSU/kernel/Kconfig"
+
 source "drivers/xen/Kconfig"
 
 source "drivers/vservices/Kconfig"
