--- a/fs/proc/Kconfig
+++ b/fs/proc/Kconfig
@@ -89,6 +89,10 @@ config PROC_UID
 	help
 	Provides aggregated per-uid information under /proc/uid.
 
+config PROC_STRIPPED
+	default n
+	depends on EXPERT
+	bool "Strip non-essential /proc functionality to reduce code size"
 
 config PROC_CMDLINE_APPEND_ANDROID_FORCE_NORMAL_BOOT
 	bool "Append androidboot.force_normal_boot=1 to cmdline if skip_initramfs is present"
