arch: arm64: dts: msm8953 overclock + undervolt
overclock undervolt whatever

--- a/arch/arm64/boot/dts/qcom/xiaomi/daisy.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/daisy.dtsi
@@ -12,3 +12,6 @@
  */
 
 #include "sakura/daisy.dtsi"
+#include "msm8953-oc-cpu.dtsi"
+#include "msm8953-oc-regulator.dtsi"
+#include "msm8953-oc-gpu.dtsi"
